--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -920,6 +920,18 @@ img {
 	text-align: center;
 	z-index: 5;
 }
+.main-menu .navigation>li>ul>li.dropdown:hover>a:after {
+	content: "-";
+	position: absolute;
+	right: 0;
+	top: 11px;
+	display: block;
+	line-height: 24px;
+	font-size: 24px;
+	font-weight: 600;
+	text-align: center;
+	z-index: 5;
+}
 .main-menu .navigation>li>ul>li>ul {
 	position: absolute;
 	left: 100%;
