--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1040,8 +1040,8 @@ img {
 	-o-transition: all 300ms ease;
 }
  .main-menu .navigation>li:nth-last-child(-n+3)>ul>li>ul {
- left: auto;
- right: 100%;
+ left: 100%;
+ right: auto;
 }
 .main-menu .navigation li.dropdown .dropdown-btn {
 	position: absolute;
